# simple_tic_tac_toe

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  arm64-gnu-toolchain.cmake  main.c
include/: buttons.h  common.h  computer.h  game.h  handlers.h  memo.h  menu.h  neural.h  render.h  ui.h  utils.h
src/: buttons.c  computer.c  game.c  game_check_draw.s  handlers.c  main.c  memo.c  menu.c  ml-neural-network.c  neuralnetwork.h  render.c  utils.c  w-nn.c
